--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>Configurando WebPack</title>
   <style>
+    body{
+      background-color: beige;
+    }
     ul {
       list-style: none;
       margin: 0;
